--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,26 +18,23 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MenuActivity" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".MenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MapActivity" >
-        </activity>
-        <activity android:name=".CalloutActivity" >
-        </activity>
-        <activity android:name=".LayerActivity" >
-        </activity>
-        <activity android:name=".RouteActivity" >
-        </activity>
-        <activity android:name=".LocationActivity">
-        </activity>
+        <activity android:name=".MapActivity"></activity>
+        <activity android:name=".CalloutActivity"></activity>
+        <activity android:name=".LayerActivity"></activity>
+        <activity android:name=".RouteActivity"></activity>
+        <activity android:name=".LocationActivity"></activity>
 
         <!-- 定位服务 -->
         <service android:name="com.ty.locationengine.ibeacon.BeaconService" />
+
     </application>
 
 </manifest>
